--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 #dino {
   width: 50px;
   height: 50px;
-  background-image: url(/img/dino.png);
+  background-image: url(img/dino.png);
   background-size: 50px 50px;
   position: relative;
   top: 150px;
@@ -23,7 +23,7 @@
 #cactus {
   width: 20px;
   height: 40px;
-  background-image: url(/img/cactus.png);
+  background-image: url(img/cactus.png);
   background-size: 20px 40px;
   position: relative;
   top: 110px;
